Updated OpenAPI spec, fleshed out dependency controller, removed Python versions from Travis
